--- a/basic2/basic.html
+++ b/basic2/basic.html
@@ -6,20 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        * {
-            margin-top: 5px;
-            padding: 0;
-            background-image: url("");
-        }
-    </style>
 </head>
 
 <body>
-    <div id="res"></div>
-
-
-    <script src="script.js"></script>
+    <div id="name"></div>
+    <script src="basic.js"></script>
 </body>
 
 </html>
