--- a/radek/index.html
+++ b/radek/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="xxx">	test</p>
+    <p id="xxx"></p>
    <script src="script.js"></script>
 </body>
 </html>
